platform/bb.yml
apiVersion: v1
kind: Pod
metadata:
  name: bb
  namespace: default
spec:
  containers:
  - image: antidotelabs/utility
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: bb
  restartPolicy: Always
