platform/influxdb.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: influxdb
  labels:
    app: influxdb
    antidote_role: infra
spec:
  containers:
  - name: influxdb
    image: influxdb:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8086
    - containerPort: 8083
    volumeMounts:
    - mountPath: "/var/lib/influxdb"
      name: influxdata
  volumes:
    - name: influxdata
      persistentVolumeClaim:
        claimName: influxdb-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: influxdb
  namespace: default
spec:
  selector:
    app: influxdb
  ports:
    - name: httpapi
      port: 8086
      targetPort: 8086
  type: ClusterIP
