platform/antidote-web.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: antidote-web
  labels:
    app: antidote-web
    antidote_role: infra
spec:
  containers:
  - name: guacd
    image: guacamole/guacd
    ports:
    - containerPort: 4822
  - name: antidote-web
    image: antidotelabs/antidote-web:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    readinessProbe:
      httpGet:
        path: /
        port: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: antidote-web
  namespace: default
spec:
  selector:
    app: antidote-web
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-services: "antidote-web"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    # ingress.kubernetes.io/enable-access-log: "true"
    # ingress.kubernetes.io/rewrite-target: "/antidote-web"
    # nginx.ingress.kubernetes.io/rewrite-target: "/antidote-web"
    # ingress.kubernetes.io/limit-connections
    # ingress.kubernetes.io/limit-rps
  name: antidote-web
  namespace: default
spec:
  tls:
    - hosts:
      - labs.networkreliability.engineering
      secretName: tls-certificate
  rules:
  - host: labs.networkreliability.engineering
    http:
      paths:
      - path: "/"
        backend:
          serviceName: antidote-web
          servicePort: 8080

# https://hackernoon.com/setting-up-nginx-ingress-on-kubernetes-2b733d8d2f45
# https://danielfm.me/posts/painless-nginx-ingress.html
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/README/
