platform/grafana.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: grafana
  labels:
    app: grafana
    antidote_role: infra
spec:
  containers:
  - name: grafana
    # http://docs.grafana.org/installation/docker/#migration-from-a-previous-version-of-the-docker-container-to-5-1-or-later
    image: grafana/grafana:5.0.0
    imagePullPolicy: Always
    ports:
    - containerPort: 3000
    volumeMounts:
    - mountPath: "/var/lib/grafana"
      name: grafanadata
  volumes:
    - name: grafanadata
      persistentVolumeClaim:
        claimName: grafana-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: default
spec:
  selector:
    app: grafana
  ports:
    - name: web
      port: 3000
      targetPort: 3000
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: grafana
  namespace: default
spec:
  tls:
    - hosts:
      - labs.networkreliability.engineering
      secretName: tls-certificate
  rules:
  - host: labs.networkreliability.engineering
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
