platform/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-services: "antidote-web"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/force-ssl-redirect: "false"
    # ingress.kubernetes.io/rewrite-target: "/antidote-web"
    # nginx.ingress.kubernetes.io/rewrite-target: "/antidote-web"
    # kubernetes.io/ingress.global-static-ip-name: "nrefrontend"
    # ingress.kubernetes.io/rewrite-target: "/"
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    # ingress.kubernetes.io/limit-connections
    # ingress.kubernetes.io/limit-rps
  name: master-antidote-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - labs.networkreliability.engineering
      secretName: tls-certificate

  backend:
    serviceName: antidote-web
    servicePort: 8080
  rules:
  - http:  
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 3000
      - path: /syringe
        backend:
          serviceName: syringe
          servicePort: 8086
      - path: /
        backend:
          serviceName: antidote-web
          servicePort: 8080
