platform/syringe.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: syringe
  labels:
    app: syringe
    antidote_role: infra
spec:
  serviceAccount: syringesa
  containers:
  - name: syringe
    image: antidotelabs/syringe:latest
    # image: antidotelabs/nginxtest:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 50099  # GRPC
    - containerPort: 8086   # REST/HTTP
    readinessProbe:
      httpGet:
        path: /
        port: 8086
    volumeMounts:
      - mountPath: /antidote
        name: git-volume
  volumes:
    - name: git-volume
      emptyDir: {}
    - name: git-clone
      configMap:
        name: git-clone
        defaultMode: 0755

# /var/run/secrets/kubernetes.io/serviceaccount

# kubectl create serviceaccount syringesa
# kubectl describe serviceaccount syringesa
# kubectl get secret syringesa-token-hjdjv -oyaml

---
kind: Service
apiVersion: v1
metadata:
  name: syringe
  namespace: default
spec:
  selector:
    app: syringe
  ports:
    - name: grpc
      port: 50099
      targetPort: 50099
      # nodePort: 30010
    - name: http
      port: 8086
      targetPort: 8086
      # nodePort: 30011
  type: ClusterIP
  # type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    ingress.kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-services: "syringe"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # ingress.kubernetes.io/limit-connections
    # ingress.kubernetes.io/limit-rps
  name: syringe-ingress
  namespace: default
spec:
  tls:
    - hosts:
      - labs.networkreliability.engineering
      secretName: tls-certificate
  rules:
  - host: labs.networkreliability.engineering
    http:
      paths:
      - path: "/syringe"
        backend:
          serviceName: syringe
          servicePort: 8086
