platform/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: foo-deny-external-egress
  namespace: 14-6viedvg5rctwdpcc-ns
spec:
  podSelector:
    matchLabels:
      syringeManaged: "yes"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
